<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_spotify"> Spotify Streamer</string>
    <string name="lbl_football_app">Football Scores App</string>
    <string name="lbl_library_app">Library App</string>
    <string name="lbl_build_it">Build It Bigger</string>
    <string name="lbl_xyz_reader">XYZ Reader</string>
    <string name="lbl_capstone">Capstone</string>
    <string name="msg_part_one">This button will launch my </string>
</resources>
